--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,77 +1,77 @@
 basic_settings:
   site_title: Research Software Reactor
-  site_tagline: Events and blogs for researchers wanting to get more out of Azure.
+  site_tagline: Supporting researchers, research software enginers, and technical specialists in the application of cloud computing for the research community.
   favicon_image: /images/favicon.png
 
 header_settings:
-  logo_image: 
+  logo_image:
   logo_width: 200
-  overlay_opacity: 0.7
+  overlay_opacity: 0
 
 menu_settings:
   menu_items:
-    - title: 'Latest'
-      url: '/'
+    - title: "Latest"
+      url: "/"
       #    - title: 'Projects'
       #      url: '/projects/'
-    - title: 'About'
-      url: '/about'
-    - title: 'Contact'
-      url: '/contact'
+    - title: "About"
+      url: "/about"
+    - title: "Contact"
+      url: "/contact"
 
 grid_settings:
   grid_spacing: 10
 
 contact_settings:
-  form_action: 'https://formspree.io/maywbzek'
-  confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
-  send_button_text: 'Send Message'
+  form_action: "https://formspree.io/maywbzek"
+  confirmation_url: "/thanks"
+  email_subject: "Contact form submission"
+  send_button_text: "Send Message"
 
 social_settings:
-  facebook_url: ''
-  twitter_url: ''
-  instagram_url: ''
-  snapchat_url: ''
-  youtube_url: ''
-  google-plus_url: ''
-  vimeo_url: ''
-  pinterest_url: ''
-  medium_url: ''
-  quora_url: ''
-  amazon_url: ''
-  apple_url: ''
-  android_url: ''
-  tumblr_url: ''
-  dribbble_url: ''
-  behance_url: ''
-  deviantart_url: ''
-  github_url: ''
-  reddit_url: ''
-  flickr_url: ''
-  etsy_url: ''
-  kickstarter_url: ''
-  soundcloud_url: ''
-  spotify_url: ''
-  bandcamp_url: ''
-  linkedin_url: ''
+  facebook_url: ""
+  twitter_url: ""
+  instagram_url: ""
+  snapchat_url: ""
+  youtube_url: ""
+  google-plus_url: ""
+  vimeo_url: ""
+  pinterest_url: ""
+  medium_url: ""
+  quora_url: ""
+  amazon_url: ""
+  apple_url: ""
+  android_url: ""
+  tumblr_url: ""
+  dribbble_url: ""
+  behance_url: ""
+  deviantart_url: ""
+  github_url: ""
+  reddit_url: ""
+  flickr_url: ""
+  etsy_url: ""
+  kickstarter_url: ""
+  soundcloud_url: ""
+  spotify_url: ""
+  bandcamp_url: ""
+  linkedin_url: ""
 
 color_settings:
-  background_color: '#ffffff'
-  background_alt_color: '#F5F7FA'
-  text_dark_color: '#2A2F36'
-  text_medium_color: '#6C7A89'
-  text_light_color: '#ABB7B7'
-  accent_color: '#A2DED0'
-  border_color: '#dddddd'
-  overlay_background_color: '#161B21'
-  overlay_text_color: '#ffffff'
-  error_color: '#D64541'
+  background_color: "#ffffff"
+  background_alt_color: "#F5F7FA"
+  text_dark_color: "#2A2F36"
+  text_medium_color: "#6C7A89"
+  text_light_color: "#ABB7B7"
+  accent_color: "#7ed6df"
+  border_color: "#dddddd"
+  overlay_background_color: "#161B21"
+  overlay_text_color: "#ffffff"
+  error_color: "#eb4d4b"
 
 font_settings:
-  font_embed: '<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400|Muli:400,400i,600" rel="stylesheet">'
-  title_font: '"Merriweather", sans-serif'
-  body_font: '"Muli", sans-serif'
+  font_embed: '<link href="https://fonts.googleapis.com/css?family=Catamaran:600|Merriweather+Sans:300" rel="stylesheet">'
+  title_font: '"Catamaran", sans-serif'
+  body_font: '"Merriweather", sans-serif'
   regular_weight: 400
   bold_weight: 600
   site_title:
