--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 basic_settings:
   site_title: Research Software Reactor
   site_tagline: Supporting researchers, research software enginers, and technical specialists in the application of cloud computing for the research community.
-  favicon_image: /images/favicon.png
+  favicon_image: /images/favicon.ico
 
 header_settings:
   logo_image:
@@ -61,7 +61,7 @@ color_settings:
   text_dark_color: "#2A2F36"
   text_medium_color: "#6C7A89"
   text_light_color: "#ABB7B7"
-  accent_color: "#7ed6df"
+  accent_color: "#22a6b3"
   border_color: "#dddddd"
   overlay_background_color: "#161B21"
   overlay_text_color: "#ffffff"
